deploy/namespaces.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: sec-app
  labels:
    name: sec-app
