deploy/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sec-app
  namespace: sec-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: sec-app
