deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sec-app
  namespace: sec-app
spec:
  selector:
    matchLabels:
      app: sec-app
  replicas: 2
  template:
    metadata:
      labels:
        app: sec-app
    spec:
      containers:
      - name: sec-app
        image: ghcr.io/andrewkreuzer/sec-app:main-a27e15ff-2192321406 # {"$imagepolicy": "flux-system:sec-app"}
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: sec-app
  namespace: sec-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: sec-app
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-sec-app
  namespace: sec-app
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
    - hosts:
      - sec-app.andrewkreuzer.com
      secretName: letsencrypt
spec:
  rules:
  - host: sec-app.andrewkreuzer.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sec-app
            port:
              number: 80
  ingressClassName: nginx
