deploy/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-sec-app
  namespace: sec-app
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
  - hosts:
    - sec-app.andrewkreuzer.com
    secretName: sec-app-tls
  rules:
  - host: sec-app.andrewkreuzer.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sec-app
            port:
              number: 80
  ingressClassName: nginx
